# ssstatus-rs

./: Cargo.toml  README.md  TODO.md  deny.toml
src/: main.rs
src/data/: battery.rs  mod.rs
src/io/: mod.rs
src/swaybar/: json.rs  jsontests.rs  mod.rs
src/time/: mod.rs
