[package]
name = "ssstatus-rs"
version = "0.0.2"
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.10.0"
dbus = "0.9.7"
dbus-tokio = "0.7.6"
nix = { version = "0.29", features = ["time"] }
tokio = { version = "1", features = ["rt", "io-std", "io-util", "sync", "time"] }

[features]
debug_sleep = []

[profile.dev]
panic = "abort"

[profile.release]
strip = "debuginfo"
opt-level = "s"
panic = "abort"
